--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="Lorenzo Portillo Workshop" />
-	<title>Lorenzo Portillo Workshop</title>
+	<meta name="description" content="Lorenzo Portillo Webpage" />
+	<title>Lorenzo Portillo Webpage</title>
 </head>
 
 <body>
