KHW-22 Canvas tests

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="app.css" />
     </head>
     <body>
+        <!-- Remove after development 8a8f -->
+        <div id="fps"></div>
+        <!-- BabylonJs canvas container -->
         <div id="canvas-container"></div>
     </body>
 </html>
