KHW-22 States, core, actors..

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <!-- Remove after development 8a8f -->
-        <div id="fps"></div>
+        <div id="fps-container"></div>
         <!-- BabylonJs canvas container -->
         <div id="canvas-container"></div>
     </body>
