KHW-3 Added keyframes support

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="app.css" />
     </head>
     <body>
-        <!-- Remove after development 8a8f -->
+        <!-- TODO: Remove after development -->
         <div id="fps-container"></div>
         <!-- BabylonJs canvas container -->
         <div id="canvas-container"></div>
