KHW-24 Keyframes handling improvement

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <body>
         <!-- TODO: Remove after development -->
         <div id="fps-container"></div>
+        <!-- Error message -->
+        <div id="error-container">
+            <span>There was an error loading the website:</span>
+            <br />
+            <span id="error-container-message"></span>
+        </div>
         <!-- BabylonJs canvas container -->
         <div id="canvas-container"></div>
     </body>
