--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Khanon Web</title>
         <link rel="stylesheet" href="app.css" />
+        <link rel="preload" href="./assets/fonts/roadgeek-2005-mittelschrift-regular.ttf" as="font" crossorigin="anonymous" />
     </head>
     <body>
         <!-- TODO: Remove after development -->
@@ -15,6 +16,11 @@
             <span id="error-container-message"></span>
         </div>
         <!-- BabylonJs canvas container -->
-        <div id="canvas-container"></div>
+        <div id="canvas-container">
+            <!-- GUI -->
+            <div id="blackscreen-container"></div>
+            <!-- GUI -->
+            <div id="gui-container"></div>
+        </div>
     </body>
 </html>
