--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Khanon Web</title>
+        <title>Lorenzo Portillo Website</title>
         <link rel="stylesheet" href="app.css" />
         <link rel="preload" href="./assets/fonts/roadgeek-2005-mittelschrift-regular.ttf" as="font" crossorigin="anonymous" />
     </head>
     <body>
-        <!-- TODO: Remove after development -->
-        <div id="fps-container"></div>
-        <!-- Error message -->
-        <div id="error-container">
-            <span>There was an error loading the website:</span>
-            <br />
-            <span id="error-container-message"></span>
-        </div>
-        <!-- BabylonJs canvas container -->
-        <div id="canvas-container">
-            <!-- GUI -->
-            <div id="blackscreen-container"></div>
-            <!-- GUI -->
-            <div id="gui-container"></div>
+        <div id="background">
+            <!-- Khanon.js container -->
+            <div id="khanonjs"></div>
         </div>
     </body>
 </html>
