--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <title>Lorenzo Portillo Website</title>
         <link rel="stylesheet" href="app.css" />
         <link rel="preload" href="./assets/fonts/roadgeek-2005-mittelschrift-regular.ttf" as="font" crossorigin="anonymous" />
+        <script defer="defer" src="js/app.js"></script>
     </head>
     <body>
         <div id="background">
